--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,26 @@
 site_name:  太阳活动区非线性无力场3D数据集 #The Dataset of Non-Linear Force-Free Fields of Sun
 nav:
     - 简介: 'index.md'
-    - 原始数据及抽样: 'rawdata.md'
-    - 数据预处理及计算: 'process.md'
-    - 产品数据及使用: 'product.md'
+    - 搜索: 'search.md'
+#    - 原始数据: 'rawdata.md'
+    - 数据处理: 'process.md'
+    - 产品使用: 'product.md'
     - 工具包: 'tool.md'
     - 数据支持: 'support.md'
-    - 成果与引用: 'citation.md'
-theme: readthedocs
-extra_javascript: 
-    - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+    - 成果引用: 'citation.md'
+theme:
+  name: null
+  custom_dir: 'docs/assets/cinder'
 
-# markdown_extensions:
-#     - mdx_math
+markdown_extensions:  #在conda里面使用python -m mkdocs serve 而不是mkdocs serve，否则使用默认环境会提示没有安装包
+  - pymdownx.arithmatex: # https://facelessuser.github.io/pymdown-extensions/installation/
+      generic: true
+
+extra_javascript:
+#  tex https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown-extensions/#arithmatex
+  - assets/js/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
 
 #https://www.mkdocs.org/user-guide/writing-your-docs/#configure-pages-and-navigation
